<resources>
    <string name="app_name">Diary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_diary_entry">Diary Entry Detail</string>
    <string name="title_activity_diary_add">Add Entry</string>
    <string name="action_add">Toevoegen</string>
    <string name="action_edit">Bewerken</string>
    <string name="action_save">Opslaan</string>
    <string name="diary_dear">Liefste dagboek,</string>
    <string name="done">Klaar</string>
    <string name="liefs">Veel liefs!</string>
    <string name="titel">Geef een titel op</string>

    <string name="blad_toevoegen">Bladzijde toevoegen</string>
    <string name="blad_bewerken">Bladzijde bewerken</string>
    <string name="blad_bekijken">Bladzijde bekijken</string>

    <string name="gebeurd">Wat is er gebeurd vandaag?</string>
</resources>
